# mandelbrot

./: Makefile  README-mjdataset.md  README.md  mandelbrot  pom.xml
c++/: Makefile
c++/src/: CTPL-master.README
c++/src/Mandelbrot/: CMakeLists.txt  HpComplex.cpp  HpComplex.hpp  HpDouble.cpp  HpDouble.hpp  MJGenerator.cpp  MJGenerator.hpp  MJSet.cpp  MJSet.hpp  Point.cpp  Point.hpp  ViewPort.cpp  ViewPort.hpp  closenessToSet.c  closenessToSet.h  distanceFromSet.c  distanceFromSet.h
c++/src/Mandelbrot/cmake/: FindGMP.cmake
c++/src/Mandelbrot/unit-tests/: CMakeLists.txt  testClosenessToSet.cpp  testHpDouble.cpp
src/main/java/com/hellblazer/utils/math/: README
src/main/java/com/strongblackcoffee/mandelbrot/: BigComplex.java  ColorEditor.java  ColorMap.java  ColorProvider.java  Mandelbrot.java  MandelbrotPane.java  MandelbrotSet.java  MandelbrotStatisticsCollector.java  MandelbrotStatisticsPanel.java  MjDataSetGenerator.java
src/main/java/com/strongblackcoffee/mandelbrot/doubledouble/: Complex.java  MJSet.java  SetGenerator.java
src/main/java/com/strongblackcoffee/mandelbrot/generator/: ComplexType.java  DoubleType.java  Grid.java  MJCalc.java  MJCalcBigDecimal.java  MJCalcDouble.java  MJCalcDoubleDouble.java  MJCalcFactory.java  MJSet.java  Point.java  SetGenerator.java
src/main/java/com/strongblackcoffee/mandelbrot/type/: MJComplex.java  MJDataSet.java  MJDouble.java  MJSet.java  SetGenerator.java  WrappedDouble.java  WrappedDoubleDouble.java
src/main/resources/: about.html  log4j2.xml
src/test/java/com/strongblackcoffee/mandelbrot/generator/: MJCalcBigDecimalTest.java
